--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 
 			<section id="one" class="wrapper style1 align-center">
 				
-					<div id="containereee"></div>
+					<div id="containeree" style="min-width: 900px; height: 600px; margin: 0 auto"></div>
+
 	
 
 				 
