--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 		<script src="http://code.highcharts.com/highcharts.js"></script>
 		<script src="http://code.highcharts.com/modules/exporting.js"></script>
 
-		<!-- <script type="text/javascript" src="js/jquery.min.js"></script>
+		 <!-- <script type="text/javascript" src="js/jquery.min.js"></script> -->
 		<script type="text/javascript" src="js/skel.min.js"></script>
 		<script type="text/javascript" src="js/skel-layers.min.js"></script>
 		<script type="text/javascript" src="js/init.js"></script>
 		<script type="text/javascript" src="counter.js"></script>
--->
+		
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 
 		<!-- Irène js -->
