--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		
-		<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"> </script> -->
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"> </script> 
 		<script src="http://code.jquery.com/jquery-1.11.0.js"></script>
 		<script src="http://code.highcharts.com/highcharts.js"></script>
 		<script src="http://code.highcharts.com/modules/exporting.js"></script>
 
-		 <!-- <script type="text/javascript" src="js/jquery.min.js"></script> -->
+		<script type="text/javascript" src="js/jquery.min.js"></script> 
 		<script type="text/javascript" src="js/skel.min.js"></script>
 		<script type="text/javascript" src="js/skel-layers.min.js"></script>
 		<script type="text/javascript" src="js/init.js"></script>
