--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
   		<title>Titre de la page</title>
   		<link rel="stylesheet" href="style.css">
-  		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"> </script>
-		<script src="http://code.highcharts.com/highcharts.js"></script>
-		<script src="http://code.highcharts.com/modules/exporting.js"></script>
+  		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"> </script>
+		<script src="https://code.highcharts.com/highcharts.js"></script>
+		<script src="https://code.highcharts.com/modules/exporting.js"></script>
 		<script type="text/javascript" src="script.js"></script></head>
 
 <body>
