--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@ $(function () {
 
 		<!-- Graphe intro Irène -->
 
-			<section id="one" class="wrapper style1 align-center">
+		<!--	<section id="one" class="wrapper style1 align-center">
 				
 					<div id="container" style="min-width: 900px; height: 600px; margin: 0 auto"></div>
 
-			</section>
+			</section> -->
 
 		<!-- Graphe Adeline -->
 
