--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"> </script> 
 		<script src="https://code.highcharts.com/highcharts.js"></script>
 		<script src="https://code.highcharts.com/modules/exporting.js"></script>
-		<script type="text/javascript" src="script.js"></script>
+		<script type="text/javascript" src="script2.js"></script>
 
 		<!-- <script type="text/javascript" src="js/jquery.min.js"></script>  -->
 		<script type="text/javascript" src="js/skel.min.js"></script>
@@ -63,11 +63,11 @@
 
 		<!-- Graphe intro Irène -->
 
-		<!--	<section id="one" class="wrapper style1 align-center">
+		<section id="one" class="wrapper style1 align-center">
 				
 					<div id="container" style="min-width: 900px; height: 600px; margin: 0 auto"></div>
 
-			</section> -->
+			</section> 
 
 		<!-- Graphe Adeline -->
 
