--- a/index.html
+++ b/index.html
@@ -183,9 +183,11 @@ $(document).ready(function(){
 </script>
 
 
+<!-- Demandeurs d'asile : nd de demandes acceptées / refusées -->
 
+<div class="infogram-embed" data-id="7df11091-58b7-4766-b15f-0b1b8c9b3a4f" data-type="interactive" data-title=""></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script"),d=o[0],r=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=r+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var a=e.createElement("script");a.async=1,a.id=s,a.src=i,d.parentNode.insertBefore(a,d)}}(document,0,"infogram-async","//e.infogr.am/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><br><a href="https://infogr.am/create/line-chart?utm_source=embed_bottom&utm_medium=seo&utm_campaign=line_chart" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create line charts</a></div>
 
-<!-- Graphe Aliénor -->
+<!-- Graphe Aliénor : origine des demandeurs d'asile en 2014 et 2015 en France -->
 
 <section id="two" class="wrapper style1 align-center">
 				<div class="container">
@@ -194,20 +196,278 @@ $(document).ready(function(){
 						<p>Lorem ipsum dolor sit amet adipisicing elit. Delectus consequatur sed tempus.</p>
 					</header>
 
+<div id="alienor" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+
+<script type="text/javascript">
+$(function () {
+
+    Highcharts.setOptions({
+     colors: ['#50B432', '#ED561B', '#DDDF00', '#24CBE5', '#64E572', '#FF9655', '#FFF263',      '#6AF9C4']
+    });
+    var chart;
+
+    $(document).ready(function() {
+
+        chart = new Highcharts.Chart({
+
+            chart: {
+
+                renderTo: 'alienor',
+
+                plotBackgroundColor: null,
+
+                plotBorderWidth: null,
+
+                plotShadow: false
+
+            },
+
+            title: {
+
+                text: 'Origines des demandeurs d\'asile en France (2014, 10 principaux pays)'
+
+            },
+
+            tooltip: {
+
+                formatter: function() {
+
+                    return '<b>'+ this.point.name +'</b>: '+ this.y;
+
+                }
+
+            },
+
+            plotOptions: {
+
+                pie: {
+
+                    allowPointSelect: true,
+
+                    cursor: 'pointer',
+
+                    dataLabels: {
+
+                        enabled: true,
+
+                        color: '#000000',
+
+                        connectorColor: '#000000',
+
+                        formatter: function() {
+
+                            return '<b>'+ this.point.name +'</b>: ';
+
+                        }
+
+                    }
+
+                }
+
+            },
+
+            series: [{
+
+                type: 'pie',
+
+                name: 'Browser share',
+
+                "data": [
+          				[
+          					"Rép. Dém. Congo (17%)",
+          					3782
+          				],
+          				[
+          					"Chine (11%)",
+          					2497
+          				],
+          				[
+          					"Bangladesh (11%)",
+          					2425
+          				],
+          				[
+          					"Russie (10%)",
+          					2138
+          				],
+          				{
+          					name:"Syrie (9%)",
+          					y:2072,
+                    sliced: true,
+                    selected:true
+          				},
+          				[
+          					"Pakistan (9%)",
+          					2047
+          				],
+          				[
+          					"Albanie (9%)",
+          					1944
+          				],
+          				[
+          					"Soudan (8%)",
+          					1793
+          				],
+          				[
+          					"Haïti (8%)",
+          					1730
+          				],
+          				[
+          					"Guinée (7%)",
+          					1612
+          				]
+          			]
+            }]
+
+        });
+
+    });
+});
+
+</script>
+
+
+<div id="container" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+
+<script type="text/javascript">
+$(function () {
+
+    Highcharts.setOptions({
+     colors: ['#50B432', '#ED561B', '#DDDF00', '#24CBE5', '#64E572', '#FF9655', '#FFF263',      '#6AF9C4']
+    });
+    var chart;
+
+    $(document).ready(function() {
+
+        chart = new Highcharts.Chart({
+
+            chart: {
+
+                renderTo: 'container',
+
+                plotBackgroundColor: null,
+
+                plotBorderWidth: null,
+
+                plotShadow: false
+
+            },
+
+            title: {
+
+                text: 'Origines des demandeurs d\'asile en France (2015, 10 principaux pays)'
+
+            },
+
+            tooltip: {
+
+                formatter: function() {
+
+                    return '<b>'+ this.point.name +'</b>: '+ this.y;
+
+                }
+
+            },
+
+            plotOptions: {
+
+                pie: {
+
+                    allowPointSelect: true,
+
+                    cursor: 'pointer',
+
+                    dataLabels: {
+
+                        enabled: true,
+
+                        color: '#000000',
+
+                        connectorColor: '#000000',
+
+                        formatter: function() {
+
+                            return '<b>'+ this.point.name +'</b>: ';
+
+                        }
+
+                    }
+
+                }
+
+            },
+
+            series: [{
+
+                type: 'pie',
+
+                name: 'Browser share',
+
+                "data": [
+          				[
+          					"Soudan (17%)",
+          					5091
+          				],
+          				{
+          					name:"Syrie (11%)",
+          					y:3403,
+                    sliced: true,
+
+                    selected: true
+
+          				},
+          				[
+          					"Kosovo (10%)",
+          					3139
+          				],
+          				[
+          					"Bangladesh (10%)",
+          					3071
+          				],
+          				[
+          					"Haïti (10%)",
+          					3049
+          				],
+          				[
+          					"Rép. Dém. Congo (10%)",
+          					2937
+          				],
+          				[
+          					"Chine (9%)",
+          					2814
+          				],
+          				[
+          					"Albanie (7%)",
+          					2245
+          				],
+          				[
+          					"Irak (7%)",
+          					2145
+          				],
+          				[
+          					"Afghanistan (7%)",
+          					2122
+          				]
+          			]
+            }]
+
+        });
+
+    });
+});
+
+</script>
+
+
+<!-- Composition par âge de la population migrante -->
+
+<div class="infogram-embed" data-id="88c3dfb3-409c-4a2c-8356-f43c5472e55a" data-type="interactive" data-title=""></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script"),d=o[0],r=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=r+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var a=e.createElement("script");a.async=1,a.id=s,a.src=i,d.parentNode.insertBefore(a,d)}}(document,0,"infogram-async","//e.infogr.am/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><br><a href="https://infogr.am" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create your own infographics</a></div>
+
+	
 <!-- Frise : Attention, le fond n'est pas transparent-->
 
-<iframe src="https://www.preceden.com/timelines/301700/embed" width="100%" height="394" frameborder="0">
-
+<iframe src="https://www.preceden.com/timelines/301802/embed" width="100%" height="365" frameborder="0">
  <a href="https://www.preceden.com" target="_top">Preceden Timeline Maker</a>
-
 </iframe>
-
-
-<!-- Demandeurs d'asile -->
-
-<div class="infogram-embed" data-id="asile-92666214977" data-type="interactive" data-title="Asile"></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script"),r=o[0],d=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=d+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var a=e.createElement("script");a.async=1,a.id=s,a.src=i,r.parentNode.insertBefore(a,r)}}(document,"script","infogram-async","//e.infogr.am/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><a href="https://infogr.am/asile-92666214977" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Asile</a><br><a href="https://infogr.am/create/line-chart?utm_source=embed_bottom&utm_medium=seo&utm_campaign=line_chart" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create line charts</a></div>
-
-
 
 
 		<!-- Graphe 3 -->
