--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<script src="https://code.highcharts.com/modules/exporting.js"></script>
 		<script type="text/javascript" src="script2.js"></script>
 
-		<!-- <script type="text/javascript" src="js/jquery.min.js"></script>  -->
+		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/skel.min.js"></script>
 		<script type="text/javascript" src="js/skel-layers.min.js"></script>
 		<script type="text/javascript" src="js/init.js"></script>
@@ -186,7 +186,7 @@ $(document).ready(function(){
 <!-- Demandeurs d'asile : nd de demandes acceptées / refusées -->
 
 <div class="infogram-embed" data-id="7df11091-58b7-4766-b15f-0b1b8c9b3a4f" data-type="interactive" data-title=""></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script"),d=o[0],r=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=r+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var a=e.createElement("script");a.async=1,a.id=s,a.src=i,d.parentNode.insertBefore(a,d)}}(document,0,"infogram-async","//e.infogr.am/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><br><a href="https://infogr.am/create/line-chart?utm_source=embed_bottom&utm_medium=seo&utm_campaign=line_chart" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create line charts</a></div>
-
+					
 <!-- Graphe Aliénor : origine des demandeurs d'asile en 2014 et 2015 en France -->
 
 <section id="two" class="wrapper style1 align-center">
@@ -461,7 +461,6 @@ $(function () {
 <!-- Composition par âge de la population migrante -->
 
 <div class="infogram-embed" data-id="88c3dfb3-409c-4a2c-8356-f43c5472e55a" data-type="interactive" data-title=""></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script"),d=o[0],r=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=r+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var a=e.createElement("script");a.async=1,a.id=s,a.src=i,d.parentNode.insertBefore(a,d)}}(document,0,"infogram-async","//e.infogr.am/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><br><a href="https://infogr.am" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create your own infographics</a></div>
-
 	
 <!-- Frise : Attention, le fond n'est pas transparent-->
 
