--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ $(function () {
 </script>
 
 
-<div id="container" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+<div id="anido" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
 
 <script type="text/javascript">
 $(function () {
@@ -342,7 +342,7 @@ $(function () {
 
             chart: {
 
-                renderTo: 'container',
+                renderTo: 'anido',
 
                 plotBackgroundColor: null,
 
