--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<section id="two" class="wrapper style1 align-center">
 				<div class="container">
 					<header>
-						<h2>Consectetur adipisicing elit</h2>
+						<h2>Demandes d'asiles et taux d'acceptation (2015)</h2>
 						<p>Lorem ipsum dolor sit amet adipisicing elit. Delectus consequatur sed tempus.</p>
 					</header>
 
