--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<header>
 					</header>
 
-<div class="compteur" id="compteur" style="min-width: 900px; height: 100px; margin: 0 auto ; background:transparent;">
+<div class="compteur" id="compteur" style="position: fixed;min-width: 900px; height: 100px; margin: 0 auto ; background:transparent;">
 
 <img class="deplace" width="150" height="130" src="migrant.jpg" alt="" style="border:2px black solid; margin-left:5px; margin-right: 5px;  box-shadow: 3px 3px 3px black;"/>
 <div class="texte">
