--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
 			
 <!-- Partie Quentin -->
 
-<section id="one" class="wrapper style12 align-center">
+<section id="one" class="wrapper style12 align-center" style="position: fixed;right: 0;top: 50%; width: 8em; margin-top: -2.5em;">
 				<div class="container">
 					<header>
 					</header>
 
-<div class="compteur" id="compteur" style="position: fixed;min-width: 900px; height: 100px; margin: 0 auto ; background:transparent;">
+ <div class="compteur" id="compteur" style="min-width: 900px; height: 100px; margin: 0 auto ; background:transparent;">
 
 <img class="deplace" width="150" height="130" src="migrant.jpg" alt="" style="border:2px black solid; margin-left:5px; margin-right: 5px;  box-shadow: 3px 3px 3px black;"/>
 <div class="texte">
@@ -103,6 +103,8 @@ counterID=setInterval(counterUpdate, 2500)
 </div>
 </div>
 </div>
+	
+					
 </section>
 
 <section id="one" class="wrapper style12 align-center">
