--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 			
 <!-- Partie Quentin -->
 
-<section id="one" class="wrapper style12 align-center" style="position: fixed;right: 0;top: 50%; width: 50em; margin-top: -2.5em;">
+<section id="one" class="wrapper style12 align-center" style="position: fixed;margin-left: auto;
+    margin-right: auto; top: 50%; width: 60em; margin-top: -2.5em;">
 				<div class="container">
 					<header>
 					</header>
