--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <!-- Partie Quentin -->
 
 <section id="one" class="wrapper style12 align-center" style="position: fixed;margin-left: auto;
-    margin-right: auto; top: 50%; width: 60em; margin-top: -2.5em;">
+    margin-right: auto; top: 50%; width: 60em; margin-top: -2.5em; background:transparent;">
 				<div class="container">
 					<header>
 					</header>
