--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html">Interphase</a></h1>
+				<h1><a href="index.html"></a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -56,7 +56,7 @@
 				<p></p>
 				<ul class="actions">
 					<li>
-						<a href="#" class="button big">Learn More</a>
+						<a href="#one" class="button big">Learn More</a>
 					</li>
 				</ul>
 			</section>
@@ -83,7 +83,7 @@
 <!-- Partie Quentin -->
 
 <section id="one" class="wrapper style12 align-center" style="position: fixed;margin-left: auto;
-    margin-right: auto; top: 50%; width: 60em; margin-top: -2.5em; background:transparent;">
+    margin-right: auto; top: 0; width: 60em; margin-top: -2.5em; background:black; border: 5px solid white;">
 				<div class="container">
 					<header>
 					</header>
