--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <!-- Partie Quentin -->
 
 <section id="one" class="wrapper style12 align-center" style="position: fixed;margin-left: auto;
-    margin-right: auto; top: 0; background:black; border-radius: 5px;">
+    margin-right: auto; top: 0; width: 100%; height:50px; background:black; border-radius: 5px;">
 				<div class="container">
 					<header>
 					</header>
