--- a/index.html
+++ b/index.html
@@ -83,22 +83,20 @@
 <!-- Partie Quentin -->
 
 <section id="one" class="wrapper style12 align-center" style="position: fixed;margin-left: auto;
-    margin-right: auto; top: 0; width: 100%; height:50px; background:black; border-radius: 5px;">
-				<div class="container">
- <div class="compteur" id="compteur" style="min-width: 900px; height: 100px; margin: 0 auto ; background:transparent;">
+    margin-right: auto; top: 0; width: 100%; height:30px; background:black; border-radius: 5px;">
+ <div class="compteur" id="compteur">
 
 <!-- <img class="deplace" width="150" height="130" src="migrant.jpg" alt="" style="border:2px black solid; margin-left:5px; margin-right: 5px;  box-shadow: 3px 3px 3px black;"/> -->
 <div class="texte">
-<font size="+2">Depuis que vous avez ouvert cette page </font>
+<font size="+0">Depuis que vous avez ouvert cette page </font>
 <span id="counter">000</span>
 
-<font size="+2"> personnes dans le monde ont été déplacées pour cause de conflit ou de catastrophe climatique</font>
+<font size="+0"> personnes dans le monde ont été déplacées pour cause de conflit ou de catastrophe climatique</font>
 
 <script type="text/javascript">
 counterID=setInterval(counterUpdate, 2500)
 </script>
 
-</div>
 </div>
 </div>
 	
