--- a/index.html
+++ b/index.html
@@ -81,10 +81,8 @@
 					<script id="infogram_0_map-9075157905404" title="Map" src="//e.infogr.am/js/dist/embed.js?H42" type="text/javascript"></script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><a href="https://infogr.am/map-9075157905404" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Map</a><br><a href="https://infogr.am" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create your own infographics</a></div>
 			
 <!-- Partie Quentin -->
-
-<section id="one" class="wrapper style12 align-center" style="position: fixed;margin-left: auto;
+ <div class="compteur" id="compteur" style="position: fixed;margin-left: auto;
     margin-right: auto; top: 0; width: 100%; height:10px; background:black; border-radius: 5px;">
- <div class="compteur" id="compteur">
 
 <!-- <img class="deplace" width="150" height="130" src="migrant.jpg" alt="" style="border:2px black solid; margin-left:5px; margin-right: 5px;  box-shadow: 3px 3px 3px black;"/> -->
 <div class="texte">
@@ -99,9 +97,6 @@ counterID=setInterval(counterUpdate, 2500)
 
 </div>
 </div>
-	
-					
-</section>
 
 <section id="one" class="wrapper style12 align-center">
 				<div class="container">
