--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			
 <!-- Partie Quentin -->
  <div class="compteur" id="compteur" style="position: fixed;margin-left: auto;
-    margin-right: auto; top: 0; width: auto; height:20px; background:black;">
+    margin-right: auto; top: 0; width: auto; height:20px; background:black; margin-top:5px;">
 
 <!-- <img class="deplace" width="150" height="130" src="migrant.jpg" alt="" style="border:2px black solid; margin-left:5px; margin-right: 5px;  box-shadow: 3px 3px 3px black;"/> -->
 <div class="texte">
