--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
 			
 <!-- Partie Quentin -->
  <div class="compteur" id="compteur" style="position: fixed;margin-left: 0;
-    margin-right: auto; top: 0; left:0; right:0; width: auto; height:35px; background:black; padding-top:2%; padding-bottom:2%; padding-left:3%;">
+    margin-right: auto; bottom: 0; left:0; right:0; width: auto; height:35px; background:black; padding-top:2%; padding-bottom:2%; padding-left:3%;">
 
 <!-- <img class="deplace" width="150" height="130" src="migrant.jpg" alt="" style="border:2px black solid; margin-left:5px; margin-right: 5px;  box-shadow: 3px 3px 3px black;"/> -->
 <div class="texte">
 <font size="+1">          Depuis que vous avez ouvert cette page </font>
-<span id="counter">000</span>
+<span id="counter">0000</span>
 
 <font size="+1"> personnes dans le monde ont été déplacées pour cause de conflit ou de catastrophe climatique</font>
 
