--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			
 <!-- Partie Quentin -->
  <div class="compteur" id="compteur" style="position: fixed;margin-left: 0;
-    margin-right: auto; bottom: 0; left:0; right:0; width: auto; height:35px; background:rgba(0,0,0,0.5); padding-top:2%; padding-bottom:2%; padding-left:3%;">
+    margin-right: auto; bottom: 0; left:0; right:0; width: auto; height:35px; background:rgba(0,0,0,0.5); padding-top:2%; padding-bottom:2%; padding-left:3%;z-index: 4;">
 
 <!-- <img class="deplace" width="150" height="130" src="migrant.jpg" alt="" style="border:2px black solid; margin-left:5px; margin-right: 5px;  box-shadow: 3px 3px 3px black;"/> -->
 <div class="texte">
@@ -108,7 +108,7 @@ counterID=setInterval(counterUpdate, 2500)
 
     <img class="element2" width="100" height="100" src="inconnu.jpg" alt="" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px black;"/>
 
-	<div class="element222"> <h3 class="triangle-right left0" >  Ce que nos candidats ont dit         
+	<div class="element222" style="z-index: 1;"> <h3 class="triangle-right left0" >  Ce que nos candidats ont dit         
 
 </h3> 
 
