--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ counterID=setInterval(counterUpdate, 2500)
 
     <img class="element" width="100" height="100" data-toggle="tooltip" src="lepen.png" alt="Marine Le Pen" title="Marine Le Pen" style="border:2px black solid; margin-left:15px;    box-shadow: 3px 3px 3px  rgba(227,0,27,0.5);"/>
 
-	<div class="element2"> <p class="triangle-right  left2" width="100">Contre la droite du fric et la gauche du fric, je suis la candidate de la France du peuple !
+	<div class="element2" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px black;"/> <p class="triangle-right  left2" width="100">Contre la droite du fric et la gauche du fric, je suis la candidate de la France du peuple !
 
 </p> </div>
 
@@ -140,7 +140,7 @@ counterID=setInterval(counterUpdate, 2500)
 
     <img class="element" width="100" height="100" data-toggle="tooltip" title="François Fillon" src="fillon.png" alt="" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px rgba(7,86,152,0.8);"/>
 
-	<div class="element2"> <p class="triangle-right left"">L’immense majorité des personnes qui étaient à Calais ou à Paris ne sont pas en réalité des demandeurs d’asile
+	<div class="element2" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px black;"/> <p class="triangle-right left"">L’immense majorité des personnes qui étaient à Calais ou à Paris ne sont pas en réalité des demandeurs d’asile
 
 </p> </div>
 
@@ -150,6 +150,7 @@ counterID=setInterval(counterUpdate, 2500)
 <div class="devrait1" style="background-color:  transparent"> Pourtant, selon l’OFPRA, «depuis octobre 2015, 80% des 7 000 personnes mises à l’abri dans les CAO (Centres d’accueil et d’orientation) ont déposé une demande d’asile selon les données du ministère de l’intérieur»
 </div>
 </div>
+		
 <!-- Copé -->
 <div class="gen">
 
