--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 		<section id="one" class="wrapper style1 align-center">
 				
-					<div id="container" style="min-width: 900px; height: 600px; margin: 0 auto"></div>
+					<div id="container"></div>
 
 			</section> 
 
