--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
 		<!-- Graphe intro Irène -->
 
 		<section id="one" class="wrapper style1 align-center">
+			<div class="container">
 				
 					<div id="container"></div>
-
+			</div>
 			</section> 
 
 		<!-- Graphe Adeline -->
