--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Lumière sur les migrations</h2>
-				<h3>Déchiffrer la "crise des migrants" en Europe et en France </h3>
+				<h3 style="color:white">Déchiffrer la "crise des migrants" en Europe et en France </h3>
 				<p></p>
 				<ul class="actions">
 					<li>
