--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	<!-- Deuxième partie -->	
 
 
-		<section id="two" class="wrapper style1 align-center">
+		<section id="two" class="wrapper style12 align-center">
   			<h3> La crise des migrants : un état des lieux </h3>
 
 		<!-- Frise Aliénor -->
@@ -95,8 +95,9 @@
  <a href="https://www.preceden.com" target="_top">Preceden Timeline Maker</a>
 </iframe>
 			</div>
+		</section>
 		<!-- Carte Adeline -->
-
+<section id="two" class="wrapper style1 align-center">
 			<div class="container">
 				<header>
 					<h2>Demandes d'asiles et taux d'acceptation (2015)</h2>
